feat: officialy renamed to jampgame_proxy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,15 +21,15 @@ cmake_minimum_required(VERSION 3.12)
 set(CMAKE_CXX_STANDARD 20)
 
 # For checks in subdirectories
-set(InJKA_YBEProxy TRUE)
+set(InJampgameProxy TRUE)
 
 # Project name
-set(ProjectName "JKA_YBEProxy" CACHE STRING "Project Name")
+set(ProjectName "JampgameProxy" CACHE STRING "Project Name")
 project(${ProjectName})
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 
-option(BuildJKA_YBEProxy "Whether to create projects for the JKA_YBEProxy library (jampgame)" ON)
+option(BuildJampgameProxy "Whether to create projects for the JampgameProxy library (jampgame)" ON)
 
 # Configure the use of bundled libraries.  By default, we assume the user is on
 # a platform that does not require any bundling.
@@ -108,10 +108,10 @@ get_git_head_revision(GIT_REFSPEC GIT_SHA1)
 message(STATUS "Git revision is ${GIT_SHA1}")
 
 # Binary names
-set(JKA_YBEProxy "jampgame${Architecture}")
+set(JampgameProxy "jampgame${Architecture}")
 
 # Paths
-set(JKA_YBEProxyDir "${CMAKE_SOURCE_DIR}/src")
+set(JampgameProxyDir "${CMAKE_SOURCE_DIR}/src")
 
 # Operating settings
 if(WIN64)
@@ -148,7 +148,7 @@ if(MSVC)
 	configure_msvc_runtime()
 
 	# We don't try to control symbol visibility under MSVC.
-	set(JKA_YBEProxy_VISIBILITY_FLAGS "")
+	set(JampgameProxy_VISIBILITY_FLAGS "")
 
 elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" STREQUAL "Intel") OR ("${CMAKE_C_COMPILER_ID}" MATCHES "Clang"))
 	# I hope this doesn't come back to bite me in the butt later on.
@@ -159,7 +159,7 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" S
 	# ZLib explicitly declares symbols hidden, rather than defaulting to hidden.
 	#
 	# Note that -fvisibility=hidden is stronger than -fvisibility-inlines-hidden.
-	set(JKA_YBEProxy_VISIBILITY_FLAGS "-fvisibility=hidden")
+	set(JampgameProxy_VISIBILITY_FLAGS "-fvisibility=hidden")
 
 	# removes the -rdynamic flag at linking (which causes crashes for some reason)
 	set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
@@ -269,4 +269,4 @@ if (NOT ("$ENV{SOURCE_DATE_EPOCH}" STREQUAL ""))
 endif()
 
 # Add projects
-add_subdirectory(${JKA_YBEProxyDir})
+add_subdirectory(${JampgameProxyDir})
