--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,60 +29,12 @@ list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_SOURCE_DIR}/CMakeModules")
 Include(CheckTypeSize)
 check_type_size("void*" CMAKE_SIZEOF_VOID_P)
 
-# ${Architecture} must match ARCH_STRING in q_platform.h,
-# and is used in DLL names (jagamex86.dll, jagamex86.dylib, jagamei386.so).
 if(WIN32)
-	set(X86 ON)
-	if(CMAKE_SIZEOF_VOID_P MATCHES "8")
-		set(Architecture "x86_64")
-		set(WIN64 TRUE)
-	else()
-		set(Architecture "x86")
-		set(WIN64 FALSE)
-	endif()
-else()
-	set(X86 OFF)
-	if(CMAKE_SYSTEM_PROCESSOR MATCHES "^arm")
-		set(Architecture "arm")
-	elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^i.86$")
-		set(X86 ON)
-		if(APPLE)
-			set(Architecture "x86")
-		else()
-			# e.g. Linux
-			set(Architecture "i386")
-		endif()
-	elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86.64|amd64)$")
-		# 64bits arch but compiling 32bits app
-		if("${TARGET_ARCH}" MATCHES "x86")
-			set(X86 ON)
-			set(Architecture "i386")
-
-			# set -m32 on Clang and GCC
-			if(("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" MATCHES "Clang"))
-				set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32")
-				set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
-			elseif("${CMAKE_C_COMPILER_ID}" STREQUAL "Intel")
-				set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mia32")
-				set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mia32")
-			endif()
-		else()
-			set(Architecture "x86_64")
-		endif()
-	elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "powerpc")
-		set(Architecture "ppc")
-	elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "powerpc64")
-		set(Architecture "ppc64")
-	else()
-		set(Architecture "${CMAKE_SYSTEM_PROCESSOR}")
-	endif()
+	message( ERROR "Windows is not supported, CMake will exit." )
 endif()
 
 message(STATUS "Architecture is ${Architecture}")
 
-if(WIN32 AND CMAKE_VERSION VERSION_LESS "3.4")
-	message(WARNING "Building on Windows platform with CMake version less than 3.4 is deprecated. Manifest file will fail to be included.")
-endif()
 
 # Current Git SHA1 hash
 include(GetGitRevisionDescription)
@@ -96,43 +48,10 @@ set(JampgameProxy "jampgame${Architecture}")
 set(JampgameProxyDir "${CMAKE_SOURCE_DIR}/src")
 
 # Operating settings
-if(WIN64)
-	set(SharedDefines ${SharedDefines} "WIN64")
-endif()
-
-if (APPLE)
-	set(SharedDefines "MACOS_X")
-endif()
-
-if (NOT WIN32 AND NOT APPLE)
-	set(SharedDefines "ARCH_STRING=\"${Architecture}\"")
-endif()
+set(SharedDefines "ARCH_STRING=\"${Architecture}\"")
 
 # Compiler settings
-if(MSVC)
-	set(SharedDefines ${SharedDefines} "NOMINMAX")
-	set(SharedDefines ${SharedDefines} "_CRT_SECURE_NO_WARNINGS")
-	set(SharedDefines ${SharedDefines} "_SCL_SECURE_NO_WARNINGS")
-	set(SharedDefines ${SharedDefines} "_CRT_NONSTDC_NO_DEPRECATE")
-
-	if (NOT WIN64)
-		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /arch:SSE2")
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /arch:SSE2")
-	endif()
-
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /EHsc /sdl /Ot /Gy /TP /W4")
-	
-	# Configure MSVC Runtime
-	include(MSVCRuntime)
-	if(NOT DEFINED MSVC_RUNTIME)
-		set(MSVC_RUNTIME "dynamic")
-	endif()
-	configure_msvc_runtime()
-
-	# We don't try to control symbol visibility under MSVC.
-	set(JampgameProxy_VISIBILITY_FLAGS "")
-
-elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" STREQUAL "Intel") OR ("${CMAKE_C_COMPILER_ID}" MATCHES "Clang"))
+if (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" STREQUAL "Intel") OR ("${CMAKE_C_COMPILER_ID}" MATCHES "Clang"))
 	# I hope this doesn't come back to bite me in the butt later on.
 	# Realistically though, can the C and CXX compilers be different?
 
@@ -178,13 +97,6 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" S
 			# -ioquake3 Makefile
 			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
 			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=sse")
-		endif()
-
-		if(WIN32)
-			# Link libgcc and libstdc++ statically
-			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -static-libgcc")
-			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc")
-			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libstdc++")
 		endif()
 	elseif("${CMAKE_C_COMPILER_ID}" MATCHES "Clang")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
@@ -232,12 +144,9 @@ if (NOT CMAKE_BUILD_TYPE)
 endif()
 
 if(CMAKE_BUILD_TYPE MATCHES "DEBUG" OR CMAKE_BUILD_TYPE MATCHES "Debug")
-	# CMake already defines _DEBUG for MSVC.
-	if (NOT MSVC)
-		set(SharedDefines ${SharedDefines} "_DEBUG")
-	endif()
+	set(SharedDefines ${SharedDefines} "_DEBUG")
 else()
-		set(SharedDefines ${SharedDefines} "FINAL_BUILD")
+	set(SharedDefines ${SharedDefines} "FINAL_BUILD")
 endif()
 
 # https://reproducible-builds.org/specs/source-date-epoch/
