--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,42 @@ check_type_size("void*" CMAKE_SIZEOF_VOID_P)
 
 if(WIN32)
 	message( ERROR "Windows is not supported, CMake will exit." )
+else()
+	set(X86 OFF)
+	if(CMAKE_SYSTEM_PROCESSOR MATCHES "^arm")
+		set(Architecture "arm")
+	elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^i.86$")
+		set(X86 ON)
+		if(APPLE)
+			set(Architecture "x86")
+		else()
+			# e.g. Linux
+			set(Architecture "i386")
+		endif()
+	elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86.64|amd64)$")
+		# 64bits arch but compiling 32bits app
+		if("${TARGET_ARCH}" MATCHES "x86")
+			set(X86 ON)
+			set(Architecture "i386")
+
+			# set -m32 on Clang and GCC
+			if(("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" MATCHES "Clang"))
+				set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32")
+				set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
+			elseif("${CMAKE_C_COMPILER_ID}" STREQUAL "Intel")
+				set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mia32")
+				set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mia32")
+			endif()
+		else()
+			set(Architecture "x86_64")
+		endif()
+	elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "powerpc")
+		set(Architecture "ppc")
+	elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "powerpc64")
+		set(Architecture "ppc64")
+	else()
+		set(Architecture "${CMAKE_SYSTEM_PROCESSOR}")
+	endif()
 endif()
 
 message(STATUS "Architecture is ${Architecture}")
